tests/functional/lang/parse-fail-dup-formals.err.exp
error: duplicate formal function argument 'x'
       at /pwd/parse-fail-dup-formals.nix:1:8:
            1| {x, y, x}: x
             |        ^
